# Pomp-Eirb

./: CMakeLists.txt  README.md  carte_generator.c
src/: carte.c  carte.h  common.h  defs.h  dijkstra.c  dijkstra.h  draw.c  draw.h  feu.c  feu.h  funcs.c  funcs.h  init.c  init.h  input.c  input.h  main.c  robot.c  robot.h  structs.h
test/: carte1.txt  carte2.txt  carte3.txt  carte4.txt  carte5.txt  robots_config.txt
